# dovetail

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.md.bak  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: api.md  benchmarks.md  detailed_guide.md  event-listeners.md  observability.md  retry-timeout-rate-limit.md  updated_api.md
dovetail/: __init__.py  _events.py  _register.py  _task.py  _trace.py  dovetail.py  dovetail.py.bak
pydovetail/: __init__.py  _events.py  _register.py  _task.py  _task.py.bak  _trace.py  dovetail.py
tests/: benchmark.py  test.py  test_dovetail.py
