[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dovetail"
version = "0.1.0"
description = "Lightweight helpers for sync/async interoperability."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{name = "anthrosystems", email = "peaceolawuyi01@gmail.com"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dovetail*"]