[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydovetail"
version = "0.2.0"
description = "A lightweight helper for sync/async interoperability"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{name = "anthrosystems", email = "peaceolawuyi01@gmail.com"}]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/anthrosystems/dovetail"
Repository = "https://github.com/anthrosystems/dovetail"
Changelog = "https://github.com/anthrosystems/dovetail/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-asyncio",
	"build",
	"twine",
	"ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dovetail*"]