[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydovetail"
version = "1.2.0"
description = "A lightweight helper for bridging sync and async code, built on Asyncio & ThreadPoolExecutor"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{name = "anthrosystems", email = "peaceolawuyi01@gmail.com"}]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/anthrosystems/dovetail"
Repository = "https://github.com/anthrosystems/dovetail"

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-asyncio",
	"build",
	"twine",
	"ruff",
	"objgraph",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pydovetail*"]

[tool.ruff.lint.per-file-ignores]
"tests/test.py" = ["E402"]
"tests/benchmark.py" = ["E402"]